# rust-skeleton

./: Cargo.toml  README.rst
ci/: build.sh  pipeline.yml  release.sh
src/: main.rs
